Fixes room available for overview rankings on small mobile

--- a/src/_scss/layout/_overview.scss
+++ b/src/_scss/layout/_overview.scss
@@ -216,7 +216,7 @@ div.main {
                         
                     ul.variables {
                         margin-left: 35%;
-                        width: 75%;
+                        width: 88%;
 
                         @include breakpoint($tablet) {
                             @include grid-span(15,10);
